<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:color="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.CoinPriceListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:elevation="4dp"

            android:background="@drawable/top_bar_background"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/ListOfCryptoTitle"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipCurrencyGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipUSD"
                        style="@style/TopBarChipStyle"
                        android:layout_width="89dp"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/usd"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipRUB"
                        style="@style/TopBarChipStyle"
                        android:layout_width="89dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/rub"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="117dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCoinPriceList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="25"
            tools:listitem="@layout/item_coin_info" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressBarLoadingCoinPriceList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/orange_dark"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayoutConnectionFailed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bitcoin_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/error_coin_price_list"
            android:textAlignment="center"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonReconnect"
            android:layout_width="175dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/try_again_button"
            android:text="@string/try_again_button"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>